Fix css <a> style as the link wasn't visible with the colour chosen

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -195,7 +195,7 @@ sup {
 }
 
 a {
-  color: #F4F5F6;
+  color: #380ADE;
   text-decoration: underline;
 }
 a:hover {
